Python to 3.13 and Powertools to v3

--- a/api/Makefile
+++ b/api/Makefile
@@ -4,6 +4,6 @@ build-UtilsLayer:
 	cp constants.py "$(ARTIFACTS_DIR)/python"
 	python -m pip install -r requirements.txt -t "$(ARTIFACTS_DIR)/python"
 	python -m pip install datamodel-code-generator pyyaml
-	datamodel-codegen --input openapi.yaml --input-file-type openapi --output "$(ARTIFACTS_DIR)/python/schema.py" --output-model-type pydantic.BaseModel
+	datamodel-codegen --input openapi.yaml --input-file-type openapi --output "$(ARTIFACTS_DIR)/python/schema.py" --output-model-type pydantic_v2.BaseModel
 	python build_params.py
 	cp params.py "$(ARTIFACTS_DIR)/python"
