Add Neptune DB (#5)
* Add Neptune Database template

* new VPC template

* integrate new templates into parent

* added pre-req information for using existing VPC

* Rename parameters and add Neptune config as parameter

* Standardised resource naming convention

--- a/template.yaml
+++ b/template.yaml
@@ -11,6 +11,30 @@ Parameters:
       - "No"
     Default: "Yes"
 
+  VpcId:
+    Description: The ID of an existing VPC, if one exists. Leave blank to have one created.
+    Type: String
+    Default: ""
+    AllowedPattern: '|vpc-[a-z0-9]+'
+
+  VpcAZs:
+    Description: Comma-separated list of availability zones (e.g. `us-east-1a,us-east-1b`) to use when a VPC is specified. The number of AZs must match the number of private subnets specified in PrivateSubnetIds.
+    Type: CommaDelimitedList
+    Default: ""
+
+  PrivateSubnetIds:
+    Description: Comma-separated list of private subnets (e.g. subnet-abc123,subnet-def456) to use when a VPC is specified. Must provide exactly one subnet per Availability Zone specified in VpcAZs.
+    Type: CommaDelimitedList
+    Default: ""
+    AllowedPattern: '|subnet-[a-z0-9]+'
+
+  NeptuneServerlessConfiguration:
+    Description: Neptune Serverless Scaling Configuration.
+    Type: String
+    Default: 1,128
+    ConstraintDescription: ServerlessScalingConfiguration must be a list of two values, MinCapacity and MaxCapacity, separated by commas. Valid values between 1-128.
+    AllowedPattern: (12[0-8]|1[01][0-9]|[1-9][0-9]|[1-9]),(12[0-8]|1[01][0-9]|[1-9][0-9]|[1-9])
+
 Mappings:
   Solution:
     Constants:
@@ -19,6 +43,8 @@ Mappings:
 
 Conditions:
   SupportWebhooks: !Equals [!Ref EnableWebhooks, "Yes"]
+
+  CreateVpc: !Equals [!Ref VpcId, ""]
 
 Transform: AWS::Serverless-2016-10-31
 
@@ -34,6 +60,11 @@ Globals:
     Environment:
       Variables:
         POWERTOOLS_LOG_LEVEL: INFO
+        NEPTUNE_ENDPOINT: !GetAtt NeptuneStack.Outputs.Endpoint
+    VpcConfig:
+      SubnetIds: !If [CreateVpc, !Split [',', !GetAtt VpcStack.Outputs.PrivateSubnetIds], !Ref PrivateSubnetIds]
+      SecurityGroupIds:
+        - !Ref LambdaSecurityGroup
 
   Api:
     OpenApiVersion: 3.0.1
@@ -258,13 +289,35 @@ Resources:
       CompatibleArchitectures:
         - arm64
 
+  LambdaSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Metadata:
+      cfn_nag:
+        rules_to_suppress:
+          - id: W5
+            reason: Outbound https to all epxected
+    Properties:
+      GroupDescription: Security group for Vpc Lambdas
+      VpcId: !If [CreateVpc, !GetAtt VpcStack.Outputs.VpcId, !Ref VpcId]
+      SecurityGroupEgress:
+        - Description: Explicit egress group locking down outbound access to only HTTPS
+          CidrIp: 0.0.0.0/0
+          IpProtocol: tcp
+          ToPort: 443
+          FromPort: 443
+        - Description: Explicit egress group locking down outbound access to only Neptune
+          CidrIp: 0.0.0.0/0
+          IpProtocol: tcp
+          ToPort: 8182
+          FromPort: 8182
+
   ServiceFunction:
     Type: AWS::Serverless::Function
     Metadata:
       cfn_nag:
         rules_to_suppress:
           - id: W89
-            reason: VPC not required
+            reason: Vpc defined in Globals section
           - id: W92
             reason: ReservedConcurrentExecutions not required
     Properties:
@@ -346,7 +399,7 @@ Resources:
       cfn_nag:
         rules_to_suppress:
           - id: W89
-            reason: VPC not required
+            reason: Vpc defined in Globals section
           - id: W92
             reason: ReservedConcurrentExecutions not required
     Properties:
@@ -498,7 +551,7 @@ Resources:
         rules_to_suppress:
           - id: W76
           - id: W89
-            reason: VPC not required
+            reason: Vpc defined in Globals section
           - id: W92
             reason: ReservedConcurrentExecutions not required
     Properties:
@@ -699,7 +752,7 @@ Resources:
         rules_to_suppress:
           - id: W76
           - id: W89
-            reason: VPC not required
+            reason: Vpc defined in Globals section
           - id: W92
             reason: ReservedConcurrentExecutions not required
     Properties:
@@ -788,7 +841,7 @@ Resources:
       cfn_nag:
         rules_to_suppress:
           - id: W89
-            reason: VPC not required
+            reason: Vpc defined in Globals section
           - id: W92
             reason: ReservedConcurrentExecutions not required
     Properties:
@@ -835,7 +888,7 @@ Resources:
       cfn_nag:
         rules_to_suppress:
           - id: W89
-            reason: VPC not required
+            reason: Vpc defined in Globals section
           - id: W92
             reason: ReservedConcurrentExecutions not required
     Properties:
@@ -872,7 +925,7 @@ Resources:
       cfn_nag:
         rules_to_suppress:
           - id: W89
-            reason: VPC not required
+            reason: Vpc defined in Globals section
           - id: W92
             reason: ReservedConcurrentExecutions not required
     Properties:
@@ -931,7 +984,7 @@ Resources:
       cfn_nag:
         rules_to_suppress:
           - id: W89
-            reason: VPC not required
+            reason: Vpc defined in Globals section
           - id: W92
             reason: ReservedConcurrentExecutions not required
     Properties:
@@ -1099,6 +1152,23 @@ Resources:
       IdentityPoolId: !Ref IdentityPool
       Roles:
         authenticated: !GetAtt AuthRole.Arn
+
+  VpcStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: templates/vpc.yaml
+    Condition: CreateVpc
+
+  NeptuneStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: templates/neptune.yaml
+      Parameters:
+        VpcId: !If [CreateVpc, !GetAtt VpcStack.Outputs.VpcId, !Ref VpcId]
+        VpcAZs: !If [CreateVpc, !GetAtt VpcStack.Outputs.VpcAZs, !Join [',', !Ref VpcAZs]]
+        PrivateSubnetIds: !If [CreateVpc, !GetAtt VpcStack.Outputs.PrivateSubnetIds, !Join [',', !Ref PrivateSubnetIds]]
+        LambdaSecurityGroupId: !Ref LambdaSecurityGroup
+        ServerlessScalingConfiguration: !Ref NeptuneServerlessConfiguration
 
 Outputs:
   ApiEndpoint:
